--- a/index.html
+++ b/index.html
@@ -73,26 +73,10 @@
       "
       class="box"
     >
-      <p style="color: #c644c6e2">
-        《凤求凰》<br />有一美人兮，见之不忘。<br />
-        一日不见兮，思之如狂。<br />
-        凤飞翱翔兮，四海求凰。<br />
-        无奈佳人兮，不在东墙。<br />
-        将琴代语兮，聊写衷肠。<br />
-        何时见许兮，慰我彷徨。<br />
-        愿言配德兮，携手相将。<br />
-        不得於飞兮，使我沦亡。<br />
-        凤兮凤兮归故乡，遨游四海求其凰。<br />
-        时未遇兮无所将，何悟今兮升斯堂！<br />
-        有艳淑女在闺房，室迩人遐毒我肠。<br />
-        何缘交颈为鸳鸯，胡颉颃兮共翱翔！<br />
-        凰兮凰兮从我栖，得托孳尾永为妃。<br />
-        交情通意心和谐，中夜相从知者谁？<br />
-        双翼俱起翻高飞，无感我思使余悲。
-      </p>
+           <a href="poster.html">海报 </a>
     </div>
     <div style="text-align: center; padding: 40px; font-size: 12px">
-      <p>版权所有：阮禾</p>
+      <p>版权所有：阮禾兰芷</p>
     </div>
   </body>
 </html>
