--- a/index.html
+++ b/index.html
@@ -73,10 +73,22 @@
       "
       class="box"
     >
-           <a href="poster.html">海报 </a>
+      <a href="poster.html" style="text-decoration: none"
+        ><p
+          style="
+            color: rgb(133, 70, 70);
+            font-family: _GB2312 KaiTi_GB2312;
+            font-size: 30px;
+            font-weight: bold;
+            text-shadow: 4px 4px 3px #0000001a;
+          "
+        >
+          海报
+        </p>
+      </a>
     </div>
     <div style="text-align: center; padding: 40px; font-size: 12px">
-      <p>版权所有：阮禾兰芷</p>
+      <p>版权所有：阮禾</p>
     </div>
   </body>
 </html>
