--- a/poster.html
+++ b/poster.html
@@ -169,6 +169,20 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 征集人：阮禾兰芷
+          <p>版权所有：阮禾</p>
+          <a href="index.html" style="text-decoration: none"
+            ><p
+              style="
+                color: rgb(133, 70, 70);
+                font-family: _GB2312 KaiTi_GB2312;
+                font-size: 30px;
+                font-weight: bold;
+                text-shadow: 4px 4px 3px #0000001a;
+              "
+            >
+              返回
+            </p></a
+          >
         </div>
       </div>
     </div>
