--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
         >
           海报
         </p>
+      </a>      <a href="reminder.html" style="text-decoration: none"
+        ><p
+          style="
+            color: rgb(133, 70, 70);
+            font-family: _GB2312 KaiTi_GB2312;
+            font-size: 30px;
+            font-weight: bold;
+            text-shadow: 4px 4px 3px #0000001a;
+          "
+        >
+          what to do?
+        </p>
       </a>
     </div>
     <div style="text-align: center; padding: 40px; font-size: 12px">
