--- a/reminder.html
+++ b/reminder.html
@@ -10,7 +10,7 @@
       content="记录和提醒当前最重要的事，可设置为浏览器起始tab"
     />
     <link rel="stylesheet" href="./reminder.css" />
-    <title>要做的事</title>
+    <title>reminder</title>
   </head>
 
   <body>
