--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       />
     </div>
     <div class="body-box">
-      <a href="./poster/poster.html"><p>海报</p> </a>
+      <a href="poster.html"><p>海报</p> </a>
       <a href="reminder.html"><p>what to do?</p> </a>
       <a href="show.html"><p>photos</p> </a>
     </div>
