--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
       <p>版权所有：阮禾兰芷</p>
     </div>
   </body>
-  <script src="./live2dw/lib/L2Dwidget.min.js"></script>
+  <script src=".\live2dw\lib\L2Dwidget.min.js"></script>
   <script>
     L2Dwidget.init({
       model: {
         // 模型
         jsonPath:
-          "./live2dw/live2d-widget-model-shizuku/assets/shizuku.model.json",
+          ".\live2dw\live2d-widget-model-shizuku\assets\shizuku.model.json",
         scale: 0.7, //模型缩放比例
       },
       display: {
