--- a/show.html
+++ b/show.html
@@ -8,8 +8,12 @@
     />
 
     <title>一些图片</title>
-    <!-- 引入字体图标 -->
     <link rel="stylesheet" href="show.css" />
+    <link
+    rel="shortcut icon"
+    href="https://raw.githubusercontent.com/ruan-he/photos/main/logo.ico"
+  />
+
   </head>
 
   <body>
