--- a/poster.html
+++ b/poster.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./poster.css" />
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <title>公告</title>
+    <link
+      rel="shortcut icon"
+      href="https://raw.githubusercontent.com/ruan-he/photos/main/logo.ico"
+    />
   </head>
 
   <body>
