--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="poster.html"><p>公告</p></a>
         <a href="show.html"><p>图片</p></a>
         <a href="reminder.html"><p>what to do</p></a>
-        <a href="#"><p>letter</p></a>
+        <a href="letter.html"><p>letter</p></a>
       </div>
     </div>
   </body>
