--- a/poster.html
+++ b/poster.html
@@ -61,6 +61,64 @@
         <div class="box1">
           <div class="boxb"></div>
           <div class="mask">
+            <h1 style="align-content: center">Cilicili学习团队介绍及邀请函</h1>
+            <br />
+            &nbsp;&nbsp;&nbsp;团队自发建立，目前六人，皆为玛丽女王学院21级学生。我们经过一年的时间，
+            产出了与玛丽女王学院大一学习相关的资料。其中包括：课件翻译、知识点总结、
+            思维导图、（专业相关单词）、原考试试卷及答案等。起初我们聚在一起只是学习资料互助，
+            减少学习中的重复性劳动。一年下来也做出了很多东西，就想把这些东西交给你们。
+            即是帮助你们学习，也希望你们可以在我们的基础上进一步完善针对我们学院的学习资料、
+            传下去，共同打造有针对性的学习资料。<br />
+            &nbsp;&nbsp;&nbsp;现正式发出邀请，请有意者与我们联系：<br />
+            &nbsp;&nbsp;&nbsp;申请条件（本邀请面向人群）：南昌大学玛丽女王学院2022级全级学生。<br />
+            &nbsp;&nbsp;&nbsp;最终通过人数：5－7人。<br />
+            &nbsp;&nbsp;&nbsp;要求：<br />
+            &nbsp;&nbsp;&nbsp;1.想学习而不是混考试。（因为要你做出东西，而不是拾人牙慧。That's
+            a matter of attitude）<br />
+            &nbsp;&nbsp;&nbsp;2.有能力产出一定量的有质量的学习资料。（没有也可以，可以练习，可以学习）<br />
+            &nbsp;&nbsp;&nbsp;3.有快速学习的能力。（大学里即使是为了学习也要学习很多非专业的知识。没有也可以，理由同上）<br />
+            &nbsp;&nbsp;&nbsp;4.有团队合作能力。<br />
+            &nbsp;&nbsp;&nbsp;5.有较好的素质。阴阳人等请回。（注意，严禁！对这些人来说这个团队也不适合）<br />
+            &nbsp;&nbsp;&nbsp;6.有竞选班委，学生会的同学请慎重考虑。（因为学习占用的时间很多且不会停止）<br />
+            &nbsp;&nbsp;&nbsp;总结：能力没有不是大问题，学起来很容易。内涵、素质和性格很难改。<br />
+            &nbsp;&nbsp;&nbsp;我们能提供的：<br />
+            &nbsp;&nbsp;&nbsp;1.持续性的学习资料（毕竟我们比你们大一级）<br />
+            &nbsp;&nbsp;&nbsp;2.稳定的求助对象<br />
+            &nbsp;&nbsp;&nbsp;3.其他（"比如我现在在学编程，有兴趣的同学可以来和我交流"等）<br /><br />
+            ---------------------------------------------------------------------<br />
+            &nbsp;&nbsp;&nbsp;按格式写真忒麻烦。<br />
+            &nbsp;&nbsp;&nbsp;我们一年，六个人，凑到了一块儿，做了点儿东西。东西对你们有帮助，
+            可以给你们，但是要求你们帮我们完善并传给下一届。<br />
+            &nbsp;&nbsp;&nbsp;我们人不多，也不想弄一个大团队，也没必要。5－7个人就可以。想来就可以报名。<br />
+            &nbsp;&nbsp;&nbsp;相较于能力，态度和素质更重要，具有“一票否决权”。<br />
+            现在需要团队合作产出的内容不多，但将来一定会有。所以团队合作及沟通能力比单纯的个人能力重要。
+            我们就是想学习的朋友熟人聚在一起形成的团队。<br />
+            &nbsp;&nbsp;&nbsp;我们做的东西还是有一点版权的。如果你加入了我们的团队，那么可以对你开放。如果你想分享给团队外的人，
+            也不是不可以。但是我们不做慈善，也不知道校方的态度（我们是个非官方团队），
+            希望仅在小范围（一位团队内人员仅可分享1－2人）。我们的东西都是电子版的。
+            你要真大范围传播，我们也无法监督。但是我们可以秋后算账嘛(｢･ω･)｢嘿。<br />
+            &nbsp;&nbsp;&nbsp;如果报名的人不多，15人以内，我们就聚在一起交流一下就算面试了
+            （但不是针对个人的面试，我们也不会面试，只是聊一聊，感觉合适就算通过了）。
+            如果人数较多，我们会准备一些问题让你们来回答。一定时间内（1－3天）提交即可。
+            没有标准答案，只是一个快速了解大家的方式而已。<br />
+            &nbsp;&nbsp;&nbsp;因为我们的能力有限，也是第一次做这种事，最终选出来的只是我们觉得合适的，
+            并不一定是你们中最好的。请见谅。<br />
+            &nbsp;&nbsp;&nbsp;如果你对结果有什么疑问，请与我们联系。<br />
+            &nbsp;&nbsp;&nbsp;如果你未被选中，但想加入我们。我们会根据你的情况来考虑。毕竟只是个刚成立的团队，
+            都是年轻人，也没太多死板的东西。<br />
+            &nbsp;&nbsp;&nbsp;“谈，都可以谈”。交流才能解决问题。<br />
+            &nbsp;&nbsp;&nbsp;时间上不合适的同学请慎重考虑。要是真不合适，也可以离开。但那就有点亡羊补牢，对双方都不好。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;以上<br />
             <a href="index.html">返回</a>
           </div>
         </div>
