--- a/show.html
+++ b/show.html
@@ -10,14 +10,13 @@
     <title>一些图片</title>
     <link rel="stylesheet" href="show.css" />
     <link
-    rel="shortcut icon"
-    href="https://raw.githubusercontent.com/ruan-he/photos/main/logo.ico"
-  />
-
+      rel="shortcut icon"
+      href="https://raw.githubusercontent.com/ruan-he/photos/main/logo.ico"
+    />
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-main">
       <div
         class="item active"
         style="background-image: url(https://s1.ax1x.com/2022/08/11/vGE3J1.jpg)"
@@ -35,6 +34,214 @@
         style="background-image: url(https://s1.ax1x.com/2022/08/11/vGEPaj.jpg)"
       ></div>
     </div>
+
+    <div class="container1">
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show1.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show2.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show3.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show4.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show5.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show6.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show27.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show23.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show14.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show24.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show10.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show15.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show17.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show18.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show19.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show20.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show27.jpg"
+          alt=""
+        />
+      </div>
+    </div>
+
+    <div class="container3">
+      <div id="s8">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show8.jpg"
+          alt=""
+        />
+      </div>
+      <div id="s29">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show29.jpg"
+          alt=""
+        />
+      </div>
+      <div id="s30">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show30.jpg"
+          alt=""
+        />
+      </div>
+      <div id="s31">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show31.jpg"
+          alt=""
+        />
+      </div>
+    </div>
+
+    <div class="container2">
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show21.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show25.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show7.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show9.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show12.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show13.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show16.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show26.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show28.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show32.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show33.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show22.jpg"
+          alt=""
+        />
+      </div>
+    </div>
+
     <script src="show.js"></script>
   </body>
 </html>
