--- a/letter.html
+++ b/letter.html
@@ -46,9 +46,9 @@
           去本部的路上有个臭水沟不知道修好了没。<br />
           &nbsp;&nbsp;&nbsp;医学村的湖叫月亮湖，下大雨的时候杨简桥会被淹。
           我喜欢坐在校长雕像前的台阶上抱着猫看湖。有次去二教的路上，
-          稍坐了一会儿。天开始下起小雨。我就和猫依偎在伞下。它们睡觉，
-          我听歌。歌听完了就拿出作业开始刷题。不觉间就到了晚上。
-          便去买了饭喂猫。玩的很开心，就不管复习的事了。
+          稍坐了一会儿。天开始下起小雨。我和猫依偎在伞下。它们睡觉，
+          我听歌。听完了开始刷题。不觉间就到了晚上。
+          便去买了饭喂猫。玩的很开心，也不管复习的事了。
           （链接：https://www.bilibili.com/video/BV1fY4y137Kb?spm&vd_source=b018a124ef322d82d3cf74c2fa8e6420<br />
           蜜雪冰城的奶茶虽然便宜一点，但是人很多。有次上完解剖课，
           在食堂吃到了相同味道的肉。当时决定再也不来这家了。现在却忘了具体是那家。<br />
