--- a/show.html
+++ b/show.html
@@ -153,6 +153,72 @@
           alt=""
         />
       </div>
+      <div id="sr5">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear5.jpeg"
+        />
+      </div>
+      <div id="sr6">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear6.jpg"
+        />
+      </div>
+      <div id="sr9">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear9.jpg"
+        />
+      </div>
+      <div id="sr8">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear8.jpg"
+        />
+      </div>
+      <div id="sr1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear1.jpg"
+        />
+      </div>
+      <div id="sr2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear2.jpg"
+        />
+      </div>
+      <div id="sr4">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear4.jpg"
+        />
+      </div>
+      <div id="sr3">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear3.jpg"
+        />
+      </div>
+      <div id="sr10">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear10.jpg"
+        />
+      </div>
+      <div id="sr12">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear12.jpg"
+        />
+      </div>
+      <div id="sr11">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear11.jpg"
+        />
+      </div>
+      <div id="sr7">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear7.jpg"
+        />
+      </div>
+      <div id="sr13">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show%20by%20bear13.jpg"
+        />
+      </div>
+
       <div id="s30">
         <img
           src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show30.jpg"
