--- a/show.html
+++ b/show.html
@@ -138,6 +138,24 @@
           alt=""
         />
       </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show34.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show37.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box1">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show39.jpg"
+          alt=""
+        />
+      </div>
     </div>
 
     <div class="container3">
@@ -231,6 +249,79 @@
           alt=""
         />
       </div>
+
+      <div id="sr16">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear16.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr17">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear17.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr25">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear25.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr14">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear14.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr15">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear15.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr20">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear20.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr23">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear23.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr18">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear18.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr21">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear21.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr26">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear26.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr22">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear22.jpg"
+          alt=""
+        />
+      </div>
+      <div id="sr24">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show_by_bear24.jpg"
+          alt=""
+        />
+      </div>
     </div>
 
     <div class="container2">
@@ -284,12 +375,6 @@
       </div>
       <div class="photo-box2">
         <img
-          src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show28.jpg"
-          alt=""
-        />
-      </div>
-      <div class="photo-box2">
-        <img
           src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show32.jpg"
           alt=""
         />
@@ -303,6 +388,12 @@
       <div class="photo-box2">
         <img
           src="https://raw.githubusercontent.com/ruan-he/photos/main/for%20show22.jpg"
+          alt=""
+        />
+      </div>
+      <div class="photo-box2">
+        <img
+          src="https://raw.githubusercontent.com/ruan-he/photos/main/for_show38.jpg"
           alt=""
         />
       </div>
